[package]
name = "behavior-tree"
version = "0.0.8"
edition = "2018"
license = "MIT"

authors = ["Jakub Arnold <darthdeus@gmail.com>"]
description = "Yet another behavior tree library for rust!"
documentation = "https://docs.rs/behavior-tree"
repository = "https://github.com/darthdeus/behavior-tree"

keywords = ["gamedev", "ai"]

[lib]
doctest = false

[features]
profiling = ["puffin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
rand = "0.8.4"
puffin = { version = "0.7.0", optional = true }
